--- a/package.json
+++ b/package.json
@@ -1,18 +1,45 @@
 {
-  "name": "express-simple-template",
-  "version": "1.0.0",
-  "description": "a simple expressjs app",
-  "main": "src/index.js",
-  "type": "module",
-  "license": "MIT",
-  "scripts": {
-    "dev": "nodemon src/index.js",
-    "start": "node src/index.js"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
-  },
-  "dependencies": {
-    "express": "^4.18.2"
-  }
+	"pnpm": {
+		"onlyBuiltDependencies": [
+			"bcrypt",
+			"esbuild"
+		]
+	},
+	"name": "mywedding-backend",
+	"version": "1.0.0",
+	"description": "",
+	"main": "src/index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "node src/index.js",
+		"dev": "nodemon src/index.js",
+		"generateKeys": "node api/src/utils/generateKeys"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"@netlify/functions": "^3.0.0",
+		"@supabase/supabase-js": "^2.48.1",
+		"bcrypt": "^5.1.1",
+		"body-parser": "^1.20.3",
+		"compression": "^1.8.0",
+		"cors": "^2.8.5",
+		"dotenv": "^16.4.7",
+		"express": "^4.21.2",
+		"helmet": "^8.0.0",
+		"jsonwebtoken": "^9.0.2",
+		"morgan": "^1.10.0",
+		"redis": "^4.7.0",
+		"serverless-http": "^3.2.0",
+		"vercel": "^41.1.0"
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.20.0",
+		"eslint": "^9.20.1",
+		"eslint-config-prettier": "^10.0.1",
+		"eslint-plugin-prettier": "^5.2.3",
+		"globals": "^16.0.0",
+		"prettier": "^3.5.1"
+	}
 }
