--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
 	"main": "src/index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "node src/index.js",
+		"start": "node index.js",
 		"dev": "nodemon src/index.js",
-		"generateKeys": "node api/src/utils/generateKeys"
+		"generateKeys": "node src/utils/generateKeys"
 	},
 	"keywords": [],
 	"author": "",
