--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 	"main": "src/index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "node index.js",
+		"start": "node src/index.js",
 		"dev": "nodemon src/index.js",
 		"generateKeys": "node src/utils/generateKeys"
 	},
